# UPStest

./: config.ini  config.py  logger.py  main.py  pdf_generator.py  pyproject.toml  replit_zip_error_log.txt  test_auth.py  ups_api.py  ups_pod_app.spec
gui/: app.py
